--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Exam</title>
+    <style> 
+
+
+
+    </style>
 </head>
 <body>
     <h2>This is My Test Exam</h2>
+    <nav>
+        <ul>
+            <li><a href="home.html">home</a>
+            <li><a href="table.html">table</a>
+            <li><a href="form.html">form</a>
+            <li><a href="list.html">list</a>
+
+            </li>
+
+    </ul>
+
+
+    </nav>
     
 </body>
 </html>
