--- a/form.html
+++ b/form.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test exam</title>
 </head>
-<body> <h2>this is form</h2>
+<body> <h2>Registration Form</h2>
+
     
 </body>
 </html>
