--- a/form.html
+++ b/form.html
@@ -6,7 +6,29 @@
     <title>test exam</title>
 </head>
 <body> <h2>Registration Form</h2>
-
+    <label for="">First Name:</label><br> <input type="text"><br>
+    <label for="">Last Name:</label><br><input type="text"><br>
+    <label for="">Email:</label><br><input type="text"><br>
+    <label for="">Password:</label><br><input type="text"> <br>
+    <label for="">Gender:
+         <input type="radio" value="Male">Male
+         <input type="radio" value="Female">Female
+         <input type="radio" value="Other">Other <br>
+         </label> 
+         <label for="">Age:</label> <input type="number"><br>
+         <label for="">Preferences:
+            <input type="checkbox" value="Acrylic Painting">Acrylic Painting
+            <input type="checkbox" value="Oil Painting"> Oil Painting
+            <input type="checkbox" value="Acrylic Painting">Water Color Painting <br>
+         </label>
+         <label for="">Occupation:
+            <select name="Student" id="Student">Student</select><br>
+         </label>
+         <label for="">Bio: <textarea name="" id=""> Share few lines about yourself</textarea><br></label>
+         <label for="">
+            <input type="button" value="Reset">
+            <input type="button" value="Submit">
+        </label>
     
 </body>
 </html>
